force-app/main/default/objects/OI_Hierarchy_Relationship__c/fields/Child_Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Object_Api_Name__c</fullName>
    <label>Child Object API Name</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>Polymorphic child reference (ADR-0022) — every relationship has a child; a root-level relationship has a child but no parent.</description>
</CustomField>