force-app/main/default/objects/OI_Hierarchy_Relationship__c/fields/Child_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Child_Record_Id__c</fullName>
    <label>Child Record Id</label>
    <type>Text</type>
    <length>18</length>
    <required>true</required>
    <description>Polymorphic child record Id (ADR-0022), paired with Child_Object_Api_Name__c.</description>
</CustomField>