force-app/main/default/objects/OI_Hierarchy_Relationship__c/fields/Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_End_Date__c</fullName>
    <label>Effective End Date</label>
    <type>Date</type>
    <description>Optional effective dating (FR-018), paired with Effective_Start_Date__c.</description>
</CustomField>