force-app/main/default/objects/OI_Hierarchy_Relationship__c/fields/Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Start_Date__c</fullName>
    <label>Effective Start Date</label>
    <type>Date</type>
    <description>Optional effective dating (FR-018) — territory changes, organizational restructuring, dealer changes, employee transfers.</description>
</CustomField>