force-app/main/default/objects/OI_Hierarchy_Relationship__c/fields/Hierarchy_Level__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Level__c</fullName>
    <label>Hierarchy Level</label>
    <type>Lookup</type>
    <referenceTo>OI_Hierarchy_Level__c</referenceTo>
    <relationshipName>OI_Level_Relationships</relationshipName>
    <relationshipLabel>OI Level Relationships</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which configured level this relationship's child record sits at (FR-005) — optional, since not every hierarchy configures explicit levels.</description>
</CustomField>