force-app/main/default/objects/OI_Hierarchy_Relationship__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>False for a relationship superseded by a move (OI_HierarchyRelationshipService writes a history row and flips this to false, never a hard delete, preserving FR-017's audit trail) or explicitly deactivated.</description>
</CustomField>