force-app/main/default/objects/OI_Hierarchy_Relationship__c/fields/Parent_Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object_Api_Name__c</fullName>
    <label>Parent Object API Name</label>
    <type>Text</type>
    <length>255</length>
    <description>Polymorphic parent reference, Text not Lookup (ADR-0022 — dynamically-typed Lookup fields per hierarchy type would require runtime metadata deployment, impossible for 2GP). Blank for a root-level relationship with no parent.</description>
</CustomField>