force-app/main/default/objects/OI_Hierarchy_Relationship__c/fields/Parent_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record_Id__c</fullName>
    <label>Parent Record Id</label>
    <type>Text</type>
    <length>18</length>
    <description>Polymorphic parent record Id (ADR-0022's Text-pair design, paired with Parent_Object_Api_Name__c). Blank for a root-level relationship. No native referential integrity — enforced at the app layer (OI_HierarchyValidationService), the same accepted trade-off Source_Node_Key__c/Target_Node_Key__c already carry for the metadata graph.</description>
</CustomField>