force-app/main/default/objects/OI_Hierarchy_Relationship__c/fields/Relationship_Key__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Key__c</fullName>
    <label>Relationship Key</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <unique>true</unique>
    <externalId>true</externalId>
    <caseSensitive>true</caseSensitive>
    <description>Computed by OI_HierarchyRelationshipService as hierarchyDefinitionId::parentRecordId::childRecordId (parentRecordId is the literal string "root" when blank) — enforces "duplicate parent-child relationships within the same hierarchy are prohibited" (FRD Business Rule 10) at the database level via a Unique/External ID constraint, while still allowing a child to have multiple DIFFERENT parents when Allow_Multiple_Parents__c is true (the key includes the parent, so only an exact duplicate pair collides).</description>
</CustomField>