force-app/main/default/objects/OI_Hierarchy_Relationship__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <label>Relationship Type</label>
    <type>Text</type>
    <length>80</length>
    <description>Free-form, admin-defined relationship label for this specific link (FR-005) — may override or refine the Definition's own default Relationship_Type__c.</description>
</CustomField>